@@ -205,6 +205,8 @@
 -(size_t)addColumnWithType:(TightdbType)type andName:(NSString *)name;
 -(size_t)addColumnWithType:(TightdbType)type andName:(NSString *)name error:(NSError *__autoreleasing *)error;
 
+-(void)removeColumnWithIndex:(size_t)columnIndex;
+
 /* Searching */
 /* FIXME: Should be findBool:(BOOL)value inColumn:(size_t)colNdx; */
 -(size_t)findBool:(size_t)colNdx value:(BOOL)value;
