@@ -269,6 +269,9 @@ using namespace std;
     return YES;
 }
 
+
+
+
 -(TightdbDescriptor*)addColumnTable:(NSString*)name
 {
     return [self addColumnTable:name error:nil];
@@ -1199,6 +1202,20 @@ using namespace std;
         0);
 }
 
+-(void)removeColumnWithIndex:(size_t)columnIndex
+{
+    TIGHTDB_EXCEPTION_HANDLER_COLUMN_INDEX_VALID(columnIndex);
+    
+    try {
+        m_table->remove_column(columnIndex);
+    }
+    catch(std::exception& ex) {
+        NSException* exception = [NSException exceptionWithName:@"tightdb:core_exception"
+                                                         reason:[NSString stringWithUTF8String:ex.what()]
+                                                       userInfo:[NSMutableDictionary dictionary]];
+        [exception raise];
+    }
+}
 
 -(size_t)findBool:(size_t)col_ndx value:(BOOL)value
 {
